--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,14 @@
 .cloud2 {
   position: absolute;
   left: 300px;
-  bottom: 300px
+  bottom: 150px
+}
+
+.rabbit {
+  height: 200px;
+  position: absolute;
+  bottom: 0;
+  right: 40vw;
 }
 
 .contact-me {
@@ -47,6 +54,7 @@
   height: 250px;
   width: 250px;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .profile {
@@ -77,46 +85,52 @@
 .top-container  {
   position: relative;
   margin: 0 auto 50px;
-  padding-top: 100px;
+  padding-top: 150px;
   background-color: #EAF6F6;
+  height: 655px;
+  font-size: 3rem;
 }
+
 
 .middle-container {
   background-color: white;
   margin: 50px auto;
 }
 
-.bottom-container {
-  background-color: #66BFBF;
-  color: #EAF6F6;
-  padding: 50px;
-  margin: 50px auto 0;
-}
-
 .underline {
   text-decoration: underline;
 }
+
+.hr {
+  border-style: dotted none none;
+  border-width: thick;
+  width: 10%;
+  margin: 50px auto;
+  border-color: black;
+}
+
+
 /***********************Tag Selector*******************/
+main {
+  text-align: center;
+}
+
 body {
   margin: 0;
   text-align: center;
   font-family: 'Merriweather', serif;
   color: #40514E;
+  background-color: LightGreen;
 }
 
 h1 {
-  margin: 50px auto 0 auto;
   font-family: 'Sacramento', cursive;
-  font-size: 562.5%;
   color: #66BFBF;
-  line-height: 2;
 }
 
 h2 {
   font-family: 'Montserrat', sans-serif;
-  font-size: 2.5rem;
   color: #66BFBF;
-  font-weight: bold;
 }
 
 h3 {
@@ -133,6 +147,7 @@ hr {
 }
 
 p {
+  font-size: 1.2rem;
   margin: 0;
   line-height: 2;
 }
@@ -145,4 +160,17 @@ a {
 
 a:hover {
   color: white;
+}
+
+header {
+  background-color: #66BFBF;
+}
+
+footer {
+  background-color: #66BFBF;
+  color: #EAF6F6;
+  padding: 50px;
+  margin: 50px auto 0;
+  text-align: center;
+  font-size: 1.5rem;
 }
